fixes overflow issue

--- a/src/App/name-intro/name-intro.css
+++ b/src/App/name-intro/name-intro.css
@@ -68,11 +68,10 @@ header h2 {
   padding-top: 20px;
   font-family: Roboto Condensed;
   font-style: normal;
-  font-weight: bold;
   line-height: 23px;
   font-size: 3rem;
   text-align: center;
-  letter-spacing: -0.05em;
+  letter-spacing: -0.01em;
   color: #494646;
   margin-top: 50px;
 }
@@ -81,37 +80,35 @@ header h2 {
   height: 100vh;
 }
 
-@media only screen and (max-width: 560px) {
-  .name-intro {
-    top: 20%;
-    width: 70%;
-    height: 45%;
-  }
-  header h1 {
-    font-size: 3.5rem;
+@media only screen and (max-width: 520px) {
+  @media screen and (min-width: 150px) {
+    .name-intro {
+      top: 20%;
+      width: 300px;
+      height: 300px;
+    }
+
+    header h1 {
+      font-size: 3.5rem;
+      text-align: center;
+    }
+
+    header h2 {
+      padding-top: 10px;
+      font-size: 2rem;
+    }
   }
 
-  header h2 {
-    font-size: 2.5rem;
-    padding-top: 0px;
+  @media screen and (min-width: 420px) {
+    .name-intro {
+      top: 20%;
+      width: 350px;
+      height: 350px;
+    }
   }
 }
 
 @media only screen and (max-width: 400px) {
-  .name-intro {
-    top: 30%;
-    width: 75%;
-    height: 35%;
-  }
-  header h1 {
-    font-size: 2.8rem;
-  }
-
-  header h2 {
-    font-size: 1.5rem;
-    padding-top: 0px;
-  }
-
   .second-navbar ul {
     text-align: center;
     margin-right: 0px;
